Implement adjusted score calculation and visualization features. Update .gitignore to retain specific output files, enhance README with project details, and add GitHub Actions workflow for automated score updates. Introduce new scripts for generating adjusted scores and visualizing percentile trends.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 node_modules/
 dist/
 .env
-output/
+
+# Output files - but keep adjusted-scores.json for extension
+output/*.txt
+output/*-adjusted-scores-*.txt
+output/percentile-visualization.html
+
+# Keep the JSON for GitHub
+!output/adjusted-scores.json
+!output/percentile-visualization.html
