--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -1,13 +1,19 @@
 {
-
   "description": "Adjusts the scores on MyAnimeList to show the original scores and the adjusted scores.",
   "manifest_version": 2,
   "name": "Mal Score Adjuster",
-  "version": "1.0",
+  "version": "1.2",
   "permissions": ["scripting", "tabs"],
   "homepage_url": "https://github.com/EHansonn/mal-score-adjuster",
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icons/border-48.png",
+    "96": "icons/border-48.png"
+  },
+  "browser_action": {
+    "default_icon": {
+      "48": "icons/border-48.png"
+    },
+    "default_title": "MAL Score Adjuster"
   },
   "host_permissions": [
     "https://raw.githubusercontent.com/EHansonn/mal-score-adjuster/main/output/adjusted-scores.json",
