--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "main": "ts-node src/index.ts",
     "standalone": "ts-node src/generate-adjusted-scores-standalone.ts",
     "build": "tsc",
+    "build:extension": "web-ext build --source-dir=src/extension --artifacts-dir=dist --overwrite-dest",
     "start": "node dist/seed.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -21,7 +22,8 @@
     "@types/node": "^20.10.0",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "web-ext": "^8.3.0"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
