Update GitHub Actions workflow to rename percentile visualization HTML output to index.html for improved deployment structure.

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -36,7 +36,7 @@ jobs:
           mkdir -p _site
           cp README.md _site/
           if [ -f output/percentile-visualization.html ]; then
-            cp output/percentile-visualization.html _site/
+            cp output/percentile-visualization.html _site/index.html
           fi
 
       - name: Upload artifact
