Enhance GitHub Actions workflow to trigger deployment upon completion of the "Update Adjusted Scores" workflow. Additionally, ensure deployment only occurs if the previous workflow was successful, improving reliability in the deployment process.

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -7,6 +7,12 @@ on:
     paths:
       - 'output/percentile-visualization.html'
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Update Adjusted Scores"]
+    types:
+      - completed
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -19,6 +25,7 @@ concurrency:
 
 jobs:
   deploy:
+    if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
